Fixes ul covering settings icon

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,5 +1,5 @@
 .headerDiv {
-    height: 125px;
+    height: 60px;
     z-index: 1;
 }
 
