--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -7,7 +7,6 @@
     width: 250px;
     background-color: black;
     opacity: .8;
-    z-index: 10;
     transition: all .2s ease-in-out;
     z-index: 2;
 }
